--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
          <footer>
          <a href="http://twitter.com/raul_giron"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
          <a href="http://facebook.com/raul.gironjimenez"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-      <p>&copy; 2006 - 2021 Raúl Girón.</p>
+      <p>&copy; Copyright 2006<script>new Date().getFullYear()>2017&&document.write(" - "+new Date().getFullYear());</script>, Ing. Raúl Girón.</p>
     </footer>
    </div>
   </body>
